force-app/main/default/objects/PPM_Project__c/fields/Actual_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Actual_Benefits__c</fullName>
    <label>Actual Benefits</label>
    <summarizedField>Benefit__c.Actual_Benefit_Amount__c</summarizedField>
    <summaryForeignKey>Benefit__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>