force-app/main/default/objects/PPM_Project__c/fields/Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Costs__c</fullName>
    <inlineHelpText>Actual costs is a roll up summary of the cost items actual amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
    <label>Actual Costs</label>
    <summarizedField>Cost_Items__c.Actual_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>Cost_Items__c.Status__c</field>
        <operation>equals</operation>
        <value>Posted, Paid, On Hold, Received, Planned</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Items__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>