force-app/main/default/objects/PPM_Project__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <inlineHelpText>Actual hours is filtered on the time that has been submitted or approved.  Draft time records as well as rejected time records are not included in the roll up summary.</inlineHelpText>
    <label>Actual Hours</label>
    <summarizedField>Time_Record__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Record__c.Time_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Record__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>