force-app/main/default/objects/PPM_Project__c/fields/Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Estimated hours for duration of the project.</inlineHelpText>
    <label>Budgeted Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>