force-app/main/default/objects/PPM_Project__c/fields/Change_Management_Process__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Process__c</fullName>
    <inlineHelpText>Please define the Change Management Process.</inlineHelpText>
    <label>Change Management Process</label>
    <type>TextArea</type>
</CustomField>