force-app/main/default/objects/PPM_Project__c/fields/Cost_Meter_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Cost_Meter_Percent_Complete__c</fullName>
    <formula>(Actual_Costs__c / Budgeted_Costs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Meter Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>