force-app/main/default/objects/PPM_Project__c/fields/Hours_Meter_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Hours_Meter_Percent_Complete__c</fullName>
    <formula>Actual_Hours__c / Budgeted_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Meter Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>