force-app/main/default/objects/PPM_Project__c/fields/Key_Constraints_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Key_Constraints_Assumptions__c</fullName>
    <inlineHelpText>What are the assumptions in terms of budget, process and people?</inlineHelpText>
    <label>Key Constraints / Assumptions</label>
    <type>TextArea</type>
</CustomField>