force-app/main/default/objects/PPM_Project__c/fields/Percent_Complete_Costs__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete_Costs__c</fullName>
    <formula>Budgeted_Costs__c  /  Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete (Costs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>