force-app/main/default/objects/PPM_Project__c/fields/Percent_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete_Hours__c</fullName>
    <formula>Actual_Hours__c / Budgeted_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>