force-app/main/default/objects/PPM_Project__c/fields/Planned_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Planned_Benefits__c</fullName>
    <label>Planned Benefits</label>
    <summarizedField>Benefit__c.Planned_Benefit_Amount__c</summarizedField>
    <summaryForeignKey>Benefit__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>