force-app/main/default/objects/PPM_Project__c/fields/Planned_Costs__c.field-meta.xml
<CustomField>
    <fullName>Planned_Costs__c</fullName>
    <inlineHelpText>Planned costs is a roll up summary of the cost items planned amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
    <label>Planned Cost</label>
    <summarizedField>Cost_Items__c.Estimated_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>Cost_Items__c.Status__c</field>
        <operation>equals</operation>
        <value>Planned, Received, On Hold, Paid, Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Items__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>