force-app/main/default/objects/PPM_Project__c/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <formula>(Planned_End_Date__c -  Planned_Start_Date__c)/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration in weeks = (Planned End Date - Planned Start Date) / 7</inlineHelpText>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>