force-app/main/default/objects/PPM_Project__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <inlineHelpText>Note: Implementation Phase Includes user acceptance, training, and post production support.</inlineHelpText>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft - Phase Zero</fullName>
                <default>true</default>
                <label>Draft - Phase Zero</label>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>