force-app/main/default/objects/PPM_Project__c/fields/Remaing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Remaing_Costs__c</fullName>
    <formula>Budgeted_Costs__c - Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget - Actual Costs</inlineHelpText>
    <label>Remaining (Costs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>