force-app/main/default/objects/PPM_Project__c/fields/Remaining_budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_budget__c</fullName>
    <formula>Budgeted_Costs__c  - Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Overall Budget  - budget line item actual cost items.</inlineHelpText>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>