force-app/main/default/objects/PPM_Project__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <formula>Budgeted_Hours__c - Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>