force-app/main/default/objects/PPM_Project__c/fields/Variance_Duration__c.field-meta.xml
<CustomField>
    <fullName>Variance_Duration__c</fullName>
    <formula>Planned_Duration__c - Project_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned - Actual (Duration)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>