force-app/main/default/objects/PPM_Project__c/fields/Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Request</label>
    <referenceTo>Work_Request__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>